--- a/src/NConsole.Options.Extensions/NConsole.Options.Extensions.csproj
+++ b/src/NConsole.Options.Extensions/NConsole.Options.Extensions.csproj
@@ -1,34 +1,42 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-  </PropertyGroup>
+    <PropertyGroup>
+        <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Description>Provides extensions to NConsole.Options command line argument parsing.</Description>
-    <Version>1.4.7.23428</Version>
-    <AssemblyVersion>1.4.7.23428</AssemblyVersion>
-    <FileVersion>1.4.7.23428</FileVersion>
-    <PackageVersion>1.4.7.23428</PackageVersion>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <Description>Provides extensions to NConsole.Options command line argument parsing.</Description>
+        <Version>1.4.8.31348</Version>
+        <AssemblyVersion>1.4.8.31348</AssemblyVersion>
+        <FileVersion>1.4.8.31348</FileVersion>
+        <PackageVersion>1.4.8.31348</PackageVersion>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Platform)'=='AnyCPU'">
-    <DocumentationFile>bin\$(Configuration)\netstandard2.0\NConsole.Options.Extensions.xml</DocumentationFile>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Platform)' == 'AnyCPU'">
+        <DocumentationFile>bin\$(Configuration)\netstandard2.0\NConsole.Options.Extensions.xml</DocumentationFile>
+    </PropertyGroup>
 
-  <!-- ReSharper disable UnknownProperty -->
-  <ItemGroup>
-    <PackageReference Include="NConsole.Options" Version="$(NConsoleOptionsVersion)" />
-  </ItemGroup>
-  <!-- ReSharper restore UnknownProperty -->
+    <Import Project="..\..\Licensing.props" />
 
-  <ItemGroup>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>$(MSBuildProjectName).Tests</_Parameter1>
-    </AssemblyAttribute>
-  </ItemGroup>
+    <ItemGroup>
+        <None Remove="*.TMP" />
+        <None Remove="**\*.TMP" />
+        <None Remove="$(ProjectFileName).DotSettings" />
+    </ItemGroup>
+
+    <!-- ReSharper disable UnknownProperty -->
+    <ItemGroup>
+        <PackageReference Include="NConsole.Options" Version="$(NConsoleOptionsVersion)" />
+    </ItemGroup>
+    <!-- ReSharper restore UnknownProperty -->
+
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+            <_Parameter1>Test.$(MSBuildProjectName)</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
 
 </Project>
